--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -67,3 +68,4 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+package-lock.json
